syntax = "proto3";

package auth_v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/nazip/grpc-auth/pkg/auth_v1;auth_v1";

service AuthV1 {
    // login user
    rpc Login (LoginRequest) returns (LoginResponse){
        option (google.api.http) ={
            post: "/auth/v1/login",
            body: "*"
        };
    }
    rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
    rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
    string username = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
    string password = 2;
}

message LoginResponse {
    string refresh_token = 1;
}

message GetRefreshTokenRequest {
    string refresh_token = 1;
}

message GetRefreshTokenResponse {
    string refresh_token = 1;
}

message GetAccessTokenRequest {
    string refresh_token = 1;
}

message GetAccessTokenResponse {
    string access_token = 1;
}